# chess

./: CMakeLists.txt
inc/: board.h  game.h
src/: board.c  game.c  main.c
